# buddhichal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Buddhichal.hpp
include/buddhichal/: Buddhichal.hpp
source/: backend.cpp  buddhichal.cpp  menu.cpp  minimax.cpp  move.cpp  processEvents.cpp  render.cpp
source/buddhichal/: buddhichal.cpp
